tests/ui/consts/const-eval/ub-write-through-immutable.stderr
error[E0080]: writing through a pointer that was derived from a shared (immutable) reference
  --> $DIR/ub-write-through-immutable.rs:10:5
   |
LL |     *ptr = 0;
   |     ^^^^^^^^ evaluation of constant value failed here

error[E0080]: writing through a pointer that was derived from a shared (immutable) reference
  --> $DIR/ub-write-through-immutable.rs:16:5
   |
LL |     *ptr = 0;
   |     ^^^^^^^^ evaluation of constant value failed here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
